--- a/my-app/src/components/SpeedLevelSelector.css
+++ b/my-app/src/components/SpeedLevelSelector.css
@@ -2,3 +2,16 @@ fieldset {
     padding: 1em;
     max-width: 20em;
 }
+
+fieldset input[type="radio"] {
+    height: 1.2em;
+    width: 1.2em;
+}
+
+fieldset input[type="radio"]:hover {
+    cursor: pointer;
+}
+
+fieldset label:hover {
+    cursor: pointer;
+}
