--- a/my-app/src/components/SpeedLevelSelector.css
+++ b/my-app/src/components/SpeedLevelSelector.css
@@ -11,6 +11,7 @@ fieldset span {
 fieldset input[type="radio"] {
     height: 1.2em;
     width: 1.2em;
+    margin: 0.25em;
 }
 
 fieldset input[type="radio"]:hover {
