--- a/my-app/src/components/Button.css
+++ b/my-app/src/components/Button.css
@@ -7,7 +7,7 @@ button {
     font-size: 1em;
     font-weight: bold;
     box-shadow: 0px 2px gray;
-    margin: 1em;
+    margin: 0em 0em 1em 0em;
 }
 
 button:hover {
